* Matron Zamira
** Change: Reduced the duration of Mark of Oblivion slightly. (personal alert)
* Sicaron
** Change: The debuff portion (Red) of Unholy Contract is now flagged as important. (personal alert)
* Inwar Darktide
** New: Added Timer for the appearance of the first Geyser in Phase 2.
** New: Added Timer for the appearance of all subsequent Geysers in Phase 2 and Phase 3.
* Akylios
** New: Added fail-safe trigger for phase 4. Damage to Jornaru should now trigger P4 if Akylios is submerged.
** Note: Accuracy of timers triggered this way will be dependent on reaction times to damaging Jornaru.
** Note: But should be less inaccurate than when P4 hits early during submerge phases.

Rise of the Phoenix
* High Priest Arakhurn
** Change: Reduced the timer for the first Fire Nova in P3, this should be the minimum duration it can occur.
** Change: Reduced the timer for the first Fiery Metamorphosis in P3, this should be the minimum duration it can occur.

Drowned Halls
* Isskal
** New: Added stop trigger to alert for Ice Shard interrupts.
** Change: Adjusted timers to account for new trigger methods.
** Fixed: The initial trigger for both the first Whirlpool event and the first Glacial Wave had Lua search incompatibility.

Expert Dungeons
* Added more Unique ID's to Expert bosses.
* Charmer's Caldera
** Caelia the Stormtouched
*** Fixed: Mod initiation corrected. She'll now start her own encounter.
* Kings Breach
** Autoch & Mondrach
*** Fixed: Saved data wasn't being recorded correctly.
* The Realm of the Fae
** Fae Lord Twyl
*** New: Added dynamic timeout duration after each phase for non-combat state.
*** Note: Bugged encounters (if any) or unusual wipes could cause the encounter to delay resetting. (rare)

German Translations
* Added: Non-critical translations for Phase Monitor and in-game chat.

Russian Translations
* Added: Akylios encounter and extra translations for other Hammerknell bosses.

----
v0.9.7

Rift Version
* New: Compatible with Rift v1.7
